--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   <h1 class="big-heading">BoxTasa</h1>
   <div class="y-innerwrap">
     <app-code-list (broadcastDetailsBind)="toggle($event)"></app-code-list>
-    <!-- <app-code-detail class="code-modal" [receiveDetailsBind]="selectedCode" (cancelDetailsBind)="toggle(null)" *ngIf="selectedCode"></app-code-detail> -->
+    <app-code-detail class="code-modal" [receiveDetailsBind]="selectedCode" (cancelDetailsBind)="toggle(null)" *ngIf="selectedCode"></app-code-detail>
   </div>
 </div>
