Style CodeDetail component

--- a/src/app/code-detail/code-detail.component.html
+++ b/src/app/code-detail/code-detail.component.html
@@ -1,3 +1,10 @@
-<p>
-  code-detail works!
-</p>
+<div app-scroll-lock="lock-scroll" to="body">
+  <h3>{{data.summary}}</h3>
+  <div class="cancel" (click)="cancelModal()"></div>
+  <ul class="subs">
+    <li *ngFor="let sign of data.subs">
+      <div class="sign">{{sign.sign}}</div>
+      <div class="meaning">{{sign.meaning}}</div>
+    </li>
+  </ul>
+</div>
